syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "TagTool.BackendNew";

package TagToolBackendNew;

// The unified error type.
message Error {
  // The error's id.
  int32 errorId = 1;
  // The description of an error.
  string message = 2;
}

message TaggableItemDto {
  oneof item {
    string file = 2;
    string folder = 3;
  };
}


// The message that unambiguously represents taggable item with associated tags.
// It should be used in replies (does not make sense for requests).
message TaggedItem {
  string id = 1;
  repeated Tag tags = 2;
  string displayName = 3;
}

message Tag {
  string id = 1;
  string text = 2;
}
